--- a/front-end-deployment.yaml
+++ b/front-end-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         application: front-end
     spec:
       containers:
-      - image: weaveworksdemos/front-end:0.3.12
+      - image: weaveworksdemos/front-end:master-b6604d91
         name: front-end
         ports:
         - containerPort: 8079
